# agents

./: .env.example  .gitignore  README.md  embed.py  pyproject.toml
.github/workflows/: pylint.yml
agents/: agent.py
librarian/: README.md  assistant.py  library.py  local_server.py  mcp.py  mcp_server.py  mcp_service.py
librarian/librarian_service/: assistant.py  library.py  mcp_server.py
researcher/: company.py
startup/: main.py  research_agent.py
startup/results/: anyscale-final_report.md  elevenlabs ai-final_report.md  fireworks ai-final_report.md  inflection ai-final_report.md  livex ai-final_report.md  nexusflow ai-final_report.md  parallel web systems-final_report.md  parallel.ai-final_report.md  parasail ai-final_report.md  shadeform ai-final_report.md  thinking machines ai-final_report.md
therapist/: agent.py  chat.py  main.py  memory.py  models.py
