[tool.poetry]
name = "agents"
version = "0.1.0"
description = ""
authors = ["Kevin Hu <hxy9243@gmail.com>"]
readme = "README.md"

packages = [
    { include = "therapist", from = "." },
    { include = "startup", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
dspy = "3.0.0b1"
dotenv = "^0.9.9"
chromadb = "^0.6.3"
sqlalchemy = "^2.0.40"
rich = "^14.0.0"
beautifulsoup4 = "^4.13.4"
openai = "=1.61.0"
exa = "^0.5.26"
exa-py = "^1.14.6"

[tool.poetry.scripts]
therapist = "therapist.main:main"
startup_researcher = "startup.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
