[project]
name = "agents"
version = "0.1.0"
description = ""
authors = [
    { name = "Kevin Hu", email = "hxy9243@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dspy[mcp]>=2.6.27,<3.0.0",
    "dotenv>=0.9.9, <0.10.0",
    "chromadb>=0.6.3, <0.7.0",
    "sqlalchemy>=2.0.40, <3.0.0",
    "rich>=14.0.0, <15.0.0",
    "beautifulsoup4>=4.13.4, <5.0.0",
    "openai==1.61.0",
    "exa-py>=1.14.6, <2.0.0",
    "mcp[cli]>=1.10.1,<2.0.0",
    "fastmcp==2.11.3",
    "uvicorn>=0.35.0",
]

[project.scripts]
therapist = "therapist.main:main"
startup_researcher = "startup.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["therapist", "startup"]
